--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,8 +19,8 @@
                     </span>
                 </a>
             </div>
-            <div class="govuk-header__content tr mt1">
-                <span class="govuk-!-font-weight-bold pr4" th:text="${userFullName}?: 'Unknown user'"></span>
+            <div sec:authorize="isAuthenticated()" class="govuk-header__content tr mt1">
+                <span class="govuk-!-font-weight-bold pr4" sec:authentication="name"></span>
                 <a href="/logout" class="govuk-header__link govuk-!-font-weight-bold dib pr3">Sign out</a>
             </div>
         </div>
