P4-2493 redirecting to the back to DPS on logging out from JPC session.  This does not log you out of DPS SSO. (#112)
* P4-2493 redirecting to the back to DPS on logging out from JPC session.  This does not log you out of DPS SSO.

* P4-2493 putting input component in form.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,9 @@
             </div>
             <div sec:authorize="isAuthenticated()" class="govuk-header__content tr mt1">
                 <span class="govuk-!-font-weight-bold pr4" sec:authentication="name"></span>
-                <a href="/logout" class="govuk-header__link govuk-!-font-weight-bold dib pr3">Sign out</a>
+                <form id="logoutForm" method="POST" th:action="@{/logout}">
+                    <a class="govuk-header__link govuk-!-font-weight-bold dib pr3" onclick="document.forms['logoutForm'].submit()">Sign out</a>
+                </form>
             </div>
         </div>
     </div>
