--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -30,12 +30,9 @@
                             <li class="moj-primary-navigation__item">
                                 <a class="moj-primary-navigation__link" href="/dashboard" aria-current="page">Move summary</a>
                             </li>
-<!--                            <li class="moj-primary-navigation__item">-->
-<!--                                <a class="moj-primary-navigation__link" href="#">Managing pricing</a>-->
-<!--                            </li>-->
-<!--                            <li class="moj-primary-navigation__item">-->
-<!--                                <a class="moj-primary-navigation__link" href="#">Manage locations</a>-->
-<!--                            </li>-->
+                            <li class="moj-primary-navigation__item">
+                                <a class="moj-primary-navigation__link" href="/search-journeys">Manage Journey Price Catalogue</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
