--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -75,7 +75,7 @@
             </div>
         </footer>
 
-        <script src="govuk-frontend-3.9.1.min.js"></script>
+        <script src="/govuk-frontend-3.9.1.min.js"></script>
         <script>
         window.GOVUKFrontend.initAll()
 
