P4 2512 search jpc journey (#117)
* P4-2512 Search Journeys

Allow searching of for journeys via a search-journeys.html form.
POSTs with results renders search-journeys-results.html
POSTs with no results reners search-journeys-results.html

New query to search distinct journeys for a supplier
Split journey query repo into a new JourneyQueryRepository
Likewise, split requests to this into a new JourneyService

* P4-2512 Search Journeys

Small fixes:
* make path to GOV.UK JS non-relative
* in move details, show prices for journeys and move in pounds
* fix distinct journeys list to use correct properties / methods

--- a/src/main/resources/templates/move.html
+++ b/src/main/resources/templates/move.html
@@ -202,7 +202,7 @@
                                 Journey payment
                             </dt>
                             <dd class="govuk-summary-list__value" th:inline="text">
-                                £[[${#numbers.formatDecimal(journey.priceInPence ?: 0, 1, 'COMMA', 2, 'POINT')}]]
+                                £[[${#numbers.formatDecimal(journey.priceInPounds() ?: 0, 1, 'COMMA', 2, 'POINT')}]]
                             </dd>
                         </div>
                     </dl>
@@ -211,7 +211,7 @@
 
             <div class="govuk-grid-column-one-third">
                 <h2 class="govuk-heading-m mb1 bt bw1 b--blue pt2">Move price</h2>
-                <p class="govuk-body">£[[${#numbers.formatDecimal(move.totalInPence() ?: 0, 1, 'COMMA', 2,
+                <p class="govuk-body">£[[${#numbers.formatDecimal(move.totalInPounds() ?: 0, 1, 'COMMA', 2,
                     'POINT')}]]</p>
             </div>
         </div>
