P4-2540: Map location page

--- a/src/main/resources/templates/add-price.html
+++ b/src/main/resources/templates/add-price.html
@@ -31,7 +31,7 @@
                            for="event-name">
                         Add price
                     </label>
-                    <div id="event-name-hint" class="govuk-hint">
+                    <div id="event-name-hint" class="govuk-hint" id="event-name-hint">
                         Example £100.00
                     </div>
                     <p th:if="${#fields.hasErrors('price')}" class="govuk-error-message">
