--- a/src/main/resources/templates/map-location.html
+++ b/src/main/resources/templates/map-location.html
@@ -12,47 +12,49 @@
 <div class="govuk-width-container" layout:fragment="content">
     <a href="/dashboard" class="govuk-back-link">Back</a>
 
+    <div class="mv4">
+        <h1 class="govuk-heading-xl mv2" th:inline="text">Map location</h1>
+        <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Please add a Schedule 34 location name for
+            this NOMIS agency ID.</p>
+    </div>
+
     <form th:action="@{/map-location}" th:object="${form}" method="post">
         <div class="govuk-form-group" th:classappend="${#fields.hasErrors('locationName')} ? 'govuk-form-group--error'">
-            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="event-name">
-                Map location
-            </label>
-            </h1>
-            <div id="map-location-name-hint" class="govuk-hint">
-                Please add a Schedule 34 location name for this NOMIS agency ID.
-            </div>
-            <div id="agency-id-hint" class="govuk-hint">
-                <span class="db govuk-!-font-weight-bold">Pick up location</span>
-                <p th:text="*{agencyId}"></p>
-                <input type="hidden" th:field="*{agencyId}"/>
-            </div>
-            <div id="location-name-hint" class="govuk-hint">
-                <span class="db govuk-!-font-weight-bold">Maps to Schedule 34 location</span>
-            </div>
-            <p th:if="${#fields.hasErrors('locationName')}" th:errors="*{locationName}" class="govuk-error-message">
-                <span class="govuk-visually-hidden">Error:</span>
-            </p>
-            <input class="govuk-input govuk-input--width-20" id="location-name" name="location-name" type="text"
-                   aria-describedby="location-name-hint" th:field="*{locationName}"
-                   th:classappend="${#fields.hasErrors('locationName')} ? 'govuk-input--error'">
-
-            <div id="location-type-hint" class="govuk-hint">
-                <span class="db govuk-!-font-weight-bold">Add location type</span>
-            </div>
-            <select name="location-type" id="location-type-id" th:field="*{locationType}">
-                <option value="AP">Airport</option>
-                <option value="CC">Crown Court</option>
-                <option value="CM">Combined Court</option>
-                <option value="CO">County Court</option>
-                <option value="HP">Hospital</option>
-                <option value="IM">Immigration</option>
-                <option value="MC">Mag Court</option>
-                <option value="O">Other</option>
-                <option value="PR">Prison</option>
-                <option value="PS">Police</option>
-                <option value="SCH">SCH</option>
-                <option value="STC">STC</option>
-            </select>
+            <ol class="list pl0">
+                <li class="mv3">
+                    <p class="govuk-label govuk-body govuk-!-font-weight-bold">Pick up location</p>
+                    <p th:text="*{agencyId}" class="govuk-body ma0"></p>
+                    <input type="hidden" th:field="*{agencyId}" class="dn"/>
+                </li>
+                <li class="mv3">
+                    <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="location-name">Maps to Schedule
+                        34 location</label>
+                    <p th:if="${#fields.hasErrors('locationName')}" class="govuk-error-message">
+                        <span class="govuk-visually-hidden">Error:</span> <span th:errors="*{locationName}"></span>
+                    </p>
+                    <input class="govuk-input govuk-input--width-20" id="location-name" name="location-name" type="text"
+                           th:field="*{locationName}"
+                           th:classappend="${#fields.hasErrors('locationName')} ? 'govuk-input--error'">
+                </li>
+                <li class="mv3">
+                    <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="location-type-id">Add location
+                        type</label>
+                    <select name="location-type" id="location-type-id" th:field="*{locationType}" class="govuk-select">
+                        <option value="AP">Airport</option>
+                        <option value="CC">Crown Court</option>
+                        <option value="CM">Combined Court</option>
+                        <option value="CO">County Court</option>
+                        <option value="HP">Hospital</option>
+                        <option value="IM">Immigration</option>
+                        <option value="MC">Mag Court</option>
+                        <option value="O">Other</option>
+                        <option value="PR">Prison</option>
+                        <option value="PS">Police</option>
+                        <option value="SCH">SCH</option>
+                        <option value="STC">STC</option>
+                    </select>
+                </li>
+            </ol>
         </div>
         <div class="flex items-center">
             <button class="govuk-button mv3 mr3" data-module="govuk-button">
