--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,8 +21,8 @@
             </div>
             <div sec:authorize="isAuthenticated()" class="govuk-header__content tr mt1">
                 <form id="logoutForm" method="POST" th:action="@{/logout}">
-                    <span class="govuk-!-font-weight-bold pr4" sec:authentication="name"></span>
-                    <a class="govuk-header__link govuk-!-font-weight-bold dib pr3" onclick="document.forms['logoutForm'].submit()">Sign out</a>
+                    <span class="govuk-!-font-weight-bold pr3" sec:authentication="name"></span>
+                    <button class="govuk-header__link govuk-!-font-weight-bold dib ph3 bg-transparent white bn button-fix">Sign out</button>
                 </form>
             </div>
         </div>
