--- a/src/main/resources/templates/journeys.html
+++ b/src/main/resources/templates/journeys.html
@@ -96,8 +96,10 @@
                     </td>
                     <td class="govuk-table__cell" scope="row"
                         th:inline="text">
-                        <span th:unless="${journey.unitPriceInPence == 0}" th:inline="text">£[[${#numbers.formatDecimal(journey.unitPriceInPounds(), 1, 'COMMA', 2, 'POINT')}]]</span>
-                        <span th:if="${journey.unitPriceInPence == 0}">Add price</span>
+                        <span th:unless="${journey.unitPriceInPence == null}" th:inline="text">£[[${#numbers.formatDecimal(journey.unitPriceInPounds(), 1, 'COMMA', 2, 'POINT')}]]</span>
+                        <span th:if="${journey.unitPriceInPence == null}">
+                            <a th:href="@{'/add-price/' + ${journey.fromNomisAgencyId} + '-' + ${journey.toNomisAgencyId}}" class="ma0 govuk-link">Add prices</a>
+                        </span>
                     </td>
                 </tr>
             </thbody>
