--- a/src/main/resources/templates/fragments/journey-summary.html
+++ b/src/main/resources/templates/fragments/journey-summary.html
@@ -2,7 +2,7 @@
     <ul class="list pl0 flex mv0">
         <li class="w-40">
             <div class="pa3">
-                <a th:href="@{/journeys}" class="govuk-heading-m govuk-link">Total moves by journey</a>
+                <a th:href="@{/journeys}" class="govuk-heading-m govuk-link">Journeys for review</a>
             </div>
         </li>
         <li class="flex-auto bl">
