--- a/src/main/resources/templates/search-journeys-results.html
+++ b/src/main/resources/templates/search-journeys-results.html
@@ -61,7 +61,7 @@
                     </td>
                     <td class="govuk-table__cell" scope="row"
                         th:inline="text">
-                        <a th:href="@{'/add-price/' + ${journey.fromNomisAgencyId} + '-' + ${journey.toNomisAgencyId}}" class="ma0 govuk-link">
+                        <a th:href="@{'/update-price/' + ${journey.fromNomisAgencyId} + '-' + ${journey.toNomisAgencyId}}" class="ma0 govuk-link">
                             <span th:inline="text">£[[${#numbers.formatDecimal(journey.unitPriceInPounds(), 1, 'COMMA', 2, 'POINT')}]]</span>
                         </a>
                     </td>
